deploy/lp-reports.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lp-reports
  labels:
    app: lp-reports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lp-reports
  template:
    metadata:
      labels:
        app: lp-reports
    spec:
      containers:
      - name: lp-reports
        image: mpetason/launchpad_reports:latest
        ports:
        - containerPort: 8001
---
kind: Service
apiVersion: v1
metadata:
  name: lp-reports-service
spec:
  selector:
    app: lp-reports
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8001
---
